Changes towards version 0.3:
- 'CREW' and 'BATT' instead of icons in combat screen when using
  PC-style menus (bug #308); from Paxtez
- New shipyard SCRAP system with scrapping confirmation
  (bug #413); from Paxtez
- Syreen ships become available when Talana says they are
  (bug #264); from Nic, Alex
- The infinity symbol is correctly printed for gas giant atmosphere
  in coarse scan screen (bug #239) -Alex
- Prevent Syreen crew above 12 getting thrown out the airlock in
  Roster screen (bug #184); from chmmravatar, Alex
- Lander report messages now use the entire panel (bug #36), from chmmravatar
- Fix colour cycling in the roster screen (bug #279), from Nic
- Fixed last seen battle-group teleporting to Sol after invoking
  Talking Pet in Sol (bug #109) -Alex
- Fixed a dialog glitch on Slylandro homeworld (#442) -Michael
- Freeze planetary simulation at beginning of landing sequence to stop
  event bursts (bug #80) -Michael
- Extra 2 ship slots in supermelee, as in the PC SC2, and all the PC
  default teams, from chmmravatar (bug #248)
  NOTE: this breaks old team saves!
- Made functions for GET_GAME_STATE and SET_GAME_STATE - SvdB
- Fixed bug with entering closing portals (bug #108) - SvdB+chmmravatar
- Mouse cursor is now hidden in fullscreen mode (bug #173) -Mika
- Version checks inside the input code to flag incompatible changes --Michael
- Install location for content on unix systems is now ${prefix}/share/uqm
  instead of ${prefix}/lib/uqm - SvdB
- New main menu graphics from MarkVera, Paxtez, Nic (bug #393)
- Removed a place where you could ask for repairs when you shouldn't 
  (bug #432), from Nic
- Can use F10 to quit during splash screen as well as main menu -Michael
- Fixed starship location when being teleported from Procyon to
  the Earth Starbase after the Precursor bomb is installed. - Svdb
- Crew death on planet is now counted properly in all cases (bug #70) -Mika
- Fixed lockup in 'save failed' alert box (bug #397), from ghakko